# rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  ENHANCEMENT_SUMMARY.md  IMPLEMENTATION_GUIDE.md  README.md  api.py  app.Dockerfile  base.Dockerfile  build-multiplatform.sh  build.sh  buildm3.sh  buildx64.sh  clean.sh  docker-compose.yml  init_ollama.sh  json_examples.md  json_stabilization_config.py  load_data.py  middle.py  middle_stable.py  openrouter_llm.py  post.py  pre.py  pyproject.toml  pyrightconfig.json  qa.py  query_rag.py  rag.py  retrieval.py  test_api.py  test_docker.sh  test_enhanced_pipeline.py  test_json_stability.py
data/: 20251025-kdp-标记后的检查项目.xlsx  list.xlsx  middle.docx  middle.json  post.docx  post.json  post.md  pre.docx  pre.json  pre.md
data/middle.md/: middle.md
