[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.58.0",
    "dotenv>=0.9.9",
    "fastapi>=0.120.0",
    "langchain>=1.0.2",
    "langchain-groq>=1.0.0",
    "langchain-huggingface>=0.1.0",
    "langchain-postgres>=0.0.9",
    "openai>=2.6.1",
    "psycopg2-binary>=2.9.9",
    "python-multipart>=0.0.9",
    "rich>=14.2.0",
    "sentence-transformers>=5.1.2",
    "uvicorn>=0.38.0",
    "yfinance>=0.2.66",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
]

[tool.uv]
required-environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
